--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,10 @@
   "root": true,
   "env": {
     "browser": true,
-    "es2020": true,
+    "es2021": true,
     "node": true
   },
-  "plugins": ["import", "react", "jsx-a11y"],
+  "plugins": ["import", "react", "jsx-a11y", "css-modules"],
   "extends": [
     "eslint:recommended",
     "plugin:import/errors",
