--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "my_website",
+  "name": "matchmade-ready",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "build": "webpack -w",
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color \" \"nodemon ./server/server.js\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Derek Koh",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -23,9 +24,6 @@
     "eslint-plugin-react": "^7.21.5",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.1",
@@ -33,6 +31,27 @@
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "concurrently": "^8.2.0",
+    "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "file-loader": "^6.2.0",
+    "mongoose": "^7.3.2",
+    "node-fetch": "^3.3.1",
+    "nodemon": "^3.0.1",
+    "pg": "^8.11.1",
+    "prop-types": "^15.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.14.1",
+    "react-router-dom": "^6.14.1",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "sass": "^1.63.6",
+    "webpack-hot-middleware": "^2.25.4"
   }
 }
