--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack -w",
+    "build": "NODE_ENV=production webpack -w",
     "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --progress --color \" \"nodemon ./server/server.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -38,6 +38,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "file-loader": "^6.2.0",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "node-fetch": "^3.3.1",
     "nodemon": "^3.0.1",
