--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.0",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
@@ -49,10 +50,12 @@
     "react-redux": "^7.2.6",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
+    "redis": "^4.6.7",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.63.6",
+    "sinon": "^15.2.0",
     "webpack-hot-middleware": "^2.25.4"
   }
 }
